--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "serve": "serve -s build",
+    "serve": "serve -s archive/v1",
     "start": "react-scripts start",
     "test": "react-scripts test"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
