--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "serve": "^12.0.1",
-    "web-vitals": "^2.1.0"
+    "sass": "^1.42.1",
+    "serve": "^12.0.1"
   },
   "scripts": {
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "serve": "serve -s archive/v1",
+    "serve": "serve -s build",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
