--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2021,
-    "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
     }
