--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "@designsbysm/word-clock",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "sass": "^1.45.1",
-    "serve": "^13.0.2"
-  },
   "scripts": {
     "build": "react-scripts build",
     "start": "react-scripts start",
     "test": "react-scripts test"
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "sass": "^1.49.7"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.17.0"
   },
   "eslintConfig": {
     "extends": [
