--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@designsbysm/word-clock",
+  "name": "@designsbysm/word-clock-react",
   "version": "0.1.0",
   "private": true,
   "scripts": {
