--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,12 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+coverage
+dist
+logs
+node_modules
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-.eslintcache
-
-# production
-/build
-
-# misc
-.DS_Store
-.vscode
-.env
-
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vscode/*
+!.vscode/extensions.json
