--- a/package.json
+++ b/package.json
@@ -1,42 +1,36 @@
 {
-  "name": "@designsbysm/word-clock-react",
-  "version": "0.1.0",
+  "name": "vite-app",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "run-s type-check build-only",
+    "build-only": "vite build",
     "docker": "docker buildx build --platform linux/amd64 --push -t smatthews02/word-clock:latest .",
-    "start": "react-scripts start",
+    "lint": "eslint src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "ngrok": "ngrok http 3000 --subdomain=designsbysm",
-    "test": "react-scripts test"
+    "preview": "vite preview",
+    "start": "vite",
+    "test": "run-s lint type-check",
+    "type-check": "tsc --noEmit -p tsconfig.json --composite false"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.52.2"
+    "prettier": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.63.6"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.2"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.4"
   }
 }
