--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "ngrok": "ngrok http 3000 --subdomain=designsbysm",
     "preview": "vite preview",
-    "start": "vite",
+    "start": "vite --open",
     "test": "run-s lint type-check",
     "type-check": "tsc --noEmit -p tsconfig.json --composite false"
   },
